syntax = "proto3";

package agent;

service Agent {
    rpc GetLogPart (WorkerRequest) returns (LogPart) {}
    rpc GetJobStatus (WorkerRequest) returns (JobStatus) {}
}


message WorkerRequest {}

message LogPart {
    string name = 1;
    uint64 job_id = 2;
    string content = 3;
    int64 number = 4;
    string uuid = 5;
    bool  final = 6;
}

message JobStatus {
    uint64 job_id = 1;
    string status = 2;
}
